genera/static/css/global.css
/* ... */
.error_handler_base div > *{
  margin: 15px 0;
}

.error_handler_base button {
  font-size: 1rem;
  margin-top: 25px;
}

::-webkit-scrollbar {
  width: 20px;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: var(--orange-color);
  border-radius: 20px;
  border: 6px solid transparent;
  background-clip: content-box;
}

/* ::-webkit-scrollbar-thumb:hover {
  background-color: var(--orange-color);
} */

h3,
h4,
h5,
h6 {
  font-weight: lighter;
}

a{
  text-decoration: none;
}

body {
  background-image: var(--background-image);
  font-family: "Roboto Condensed", sans-serif;
  color: var(--text-color);
  margin: 0;
}
/* @font-face {
  font-family: 'Manrope';
  src: local('regular'),
       url('/static/fonts/medium.woff2') format("truetype");
} */

.light_purple_background {
  background-color: var(--medium-grey-color);
}

.light_grey_background {
  background-color: var(--light-grey-color);
}

.dark_grey_background {
  background-color: var(--dark-grey-color);
}

.orange_background {
  background-color: var(--orange-color);
}

.red_background{
  background-color: var(--error-color);
}

.image_text_background {
  background-color: var(--preview-button-color);
}

.white_background {
  background-color: var(--white-color);
}

.error_color {
  color: var(--error-color) !important;
}

.remove_text_color{
  color:var()
}

.no_margin {
  margin: 0;
}

.center {
  text-align: center;
}

.shadow_strong {
  box-shadow: rgba(0, 0, 0, 0.055) 0px 14px 20px
    /* rgba(0, 0, 0, 0.22) 0px 10px 10px; */
}

.shadow_weak {
  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.grow {
  transition: all 0.15s ease-in-out;

}
.grow:hover {
  transform: scale(1.04);
}

.custom_grid * {
  margin: 5px;
  border-radius: 5px;
}

.general_button {
  padding: 10px 20px;
  border-radius: 15px;
  cursor: pointer;
  /* border: none; */
  border-style: solid;
  border-width: 1px;
  border-color: var(--border-color);
}

.general_button_no_border {
  padding: 10px 20px;
  border-radius: 10px;
  cursor: pointer;
  border: none;
}
.general_button_no_border:disabled{
  background: var(--disabled-background-color) !important;
  cursor: default;
  
}
.general_button_no_border:disabled > h4{
  color: var(--disabled-text-color) !important;
}
#preview:disabled ~ #cooldown{
  display: block !important;
}
#cooldown{
  display: none;
  margin: 0;
  font-size: 14px;
  text-align: center;
  color: var(--text-color-2);
}
.general_button_no_border > h4 {
  color:var(--text-preview-color);
  font-weight: bold;
  
}
.general_button_no_border > .generate {
  color: var(--text-generate-color);
  font-weight: bold;
  
}

.disable_scrolling {
  overflow: hidden;
}

.upload_page_property_fields {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px;
  gap: 10px;
  justify-content: space-around;
}

.upload_page_property_fields > * {
  box-sizing: border-box;
}


.general_input {
  width: 100%;
}

.close_button_color {
  filter: var(--remove-button-color);
}

.error_img_color {
  filter: var(--red-img-color);
}

.field_error, .field_success {
  background-repeat: no-repeat !important;
  background-position: calc(100% - 5px) 8px !important;
  background-size: 20px !important;
}

.field_error {
  background: url('/static/icons/remove_red.svg');
}

.field_success {
  background: url('/static/icons/check.svg');
}

.color_image_orange {
    /* filter: invert(74%) sepia(37%) saturate(553%) hue-rotate(332deg)
    brightness(95%) contrast(91%); */
    filter: var(--filter-color)
}

.color_icon_background {
    filter: var(--icon-color);
}

.color_image_dark {
  /* filter: invert(30%) sepia(13%) saturate(663%) hue-rotate(19deg)
    brightness(92%) contrast(83%); */
    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(18deg) brightness(123%) contrast(102%);
    display: block;
}

.input_file::-webkit-file-upload-button {
  border: none;
  border-radius: 30px;
  background-color: #e2e2da;
  color: rgb(0, 0, 0);
  padding: 20px 35px;
  cursor: pointer;
  font-weight: bold;
}

.rounded_container {
  border-radius: 20px;
  padding: 10px 5px;
}

.top_round_container {
  border-radius: 30px 30px 0px 0px;
}

.bottom_round_container {
  border-radius: 0px 0px 30px 30px;
}

.rounded_container_no_padding {
  border-radius: 10px;
}
#wrapper {
  overflow: hidden;
  width: 100%;
  background-color: var(--border-color);
  border-radius: 0 0 15px 15px;
  margin-top: 10px;
  margin-bottom: -10px;
}
#wrapper > div {
  overflow: hidden;
  flex-grow: 1;
}

.popup_wrapper {
  position: fixed;
  width: 100%;
  height: 100%;
  display: flex;
  backdrop-filter: blur(10px);
  z-index: 2;
}

.popup_wrapper > .yes_no_container {
  width: 400px;
  height: 150px;
  background: var(--medium-grey-color);
  margin: auto;
  justify-content: space-evenly;
  text-align: center
}

.popup_wrapper > .yes_no_container > .query {
  font-size: 1.5rem;
  color: var(--text-color);
  margin: 20px;
}

.popup_wrapper > .yes_no_container > .yes_no {
  display: flex;
  justify-content: space-evenly;
}

.yes_no > div {
  width: 30%;
  height: 20%;
  cursor: pointer;
}

/* GENERAL */

/* UPLOAD PAGE */
.upload_wrapper {
  padding: 10px 25px;
  /* height: 95vh; */
}

.upload_upper {
  height: 50px;
  width: 100%;
}

.upload_layers_wrapper{
  height: calc(100vh - var(--header-height)  - 50px); 
  min-width: 300px; 
  width: 400px;
}

.upload_section_swap {
  background-color: var(--light-grey-color);
  height: 50px;
  /* width: min(30vw, 400px);
  min-width: 400px; */
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  gap: 25px;
  /* float: left; */
  margin-bottom: 20px;
}

.upload_section_swap > img {
  height: 35px;
  aspect-ratio: 1;
  /* padding-top: 10px; */
  cursor: pointer;
  border-radius: 5px;
  width: 33%;
  filter:var(--tab-img-color)
}
.upload_section_swap > img:hover {
  background-color: var( --off-white-color);
}
/* ... */

